# algorithmic-textual-comparison-app

./: .env  .gitignore  LICENCE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: manage.py
backend/src/api/: models.py  serializers.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_alter_tenk_unique_together.py
backend/src/core/: pagination.py  permissions.py
backend/src/idp/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/nlp/: urls.py  utils.py  views.py
backend/src/user/: models.py  serializers.py  urls.py  views.py
backend/src/user/migrations/: 0001_initial.py
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: Button.vue  Cluster.vue  Dialog.vue  DialogMixin.js  Notification.vue  Piechart.vue  ScatterChart.vue  Similarity.vue  Table.vue  TextDialog.vue
frontend/layouts/: Default.vue
frontend/pages/: index.vue
frontend/pages/admin/: index.vue
frontend/pages/analysis/: index.vue
frontend/pages/auth/: login.vue
frontend/pages/db-management/: index.vue
frontend/pages/user-management/: index.vue
frontend/types/: index.d.ts
frontend/views/: UIElements.vue
module/: app.py  pyproject.toml
module/algorithms/: clustering.py  similarity.py  text_processing.py  vectorization.py  visualization.py  word_embedding.py
