[tool.poetry]
name = "module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
gensim = "^4.3.2"
transformers = "^4.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
